--- a/client/src/app/pages/Juegos/PantallasJuego.css
+++ b/client/src/app/pages/Juegos/PantallasJuego.css
@@ -1,23 +1,3 @@
-.principal{
-	background: #22201C;
-}
-
- body{
- 	overflow: hidden;
- }
-
- .container{
-	position: relative;
-    padding: auto;
-    width: 600px;
-    height: 650px;
-    min-height: 400px;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    background-color: #22201C;
-}
-
 h1::first-letter{
 	color: #D5B93E;
 }
@@ -25,38 +5,15 @@ h1::first-letter{
 h1{
 	margin-top: auto;
 	color: #ffffff;
-	font-size:100px;
+	font-size:150px;
+	font-weight: bold;
 }
 
-#juego{
-	margin-bottom: auto;
-	font-size: 60px;
-}
-
-.logo{
-	width:70em;
-	height: 200px;
-	background-color: #22201C;
- }
-
-
- .Regresar{
-	background-color: #22201C;
-	width:99%;
-	height: 18%;
-	position:absolute;
- }
-
- .memorama{
-	 float: left;
-	 padding: 30px;
-	 width: 400px;
-	 margin: 20px;
- }
-
- .adivina{
-	float: right;
-	padding: 30px;
-	width: 400px;
-	margin: 20px;
+html, 
+.homeJuegos {
+    height: 100%;
+    width: 100%;
+    background-color: #22201C;
+    overflow: -moz-scrollbars-vertical;
+    overflow-y: auto;
 }
