--- a/client/src/app/pages/Users/PantallasUsuario.css
+++ b/client/src/app/pages/Users/PantallasUsuario.css
@@ -8,25 +8,26 @@
  }
 
  
- .container{
+ .containerUsuarios{
  	position: relative;
-	padding: auto;
- 	width: 580px;
+	padding: 10%;
+ 	width: 90%;
 	height: 650px;
- 	min-height: 400px;
  	border-radius: 10px;
  	display: flex;
  	justify-content: center;
  	align-items: center;
-	background-color: #22201C;
+	margin-left:5%;
+	margin-left: 55;
+	background-color:#bd4040;
  }
 
  .formulario{
-	margin-top: 122px;
+	margin-top: 18%;
 	width:100%;
-	height: 290px;
+	height: 65%;
 	position: absolute;
-	background-color: #22201C;
+	background-color: #34c86d;
  }
 
  h1::first-letter{
@@ -43,33 +44,34 @@
 	position: center;
 	margin-right: 100px;
 	width: 500px;
+	background-color: darkorchid;
  }
  
  label{
 	 color: #ffffff;
  }
 
- .logo{
-	width:70em;
-	height: 240px;
-	margin-bottom: 390px;
+ .logoUsuarios{
+	width:99%;
+	height: 32%;
+	margin-bottom: 36%;
 	position: absolute;
-	background-color: #22201C;
+	background-color: #43b0be;
  }
  
  .logo2{
 	width:50%;
 	height: 46%;
 	justify-content: left;
-	margin-bottom: 30%;
-	background-color: #22201C;
+	margin-bottom: 30%;	
+	background-color: #e242cd;
  }
 
  .Regresar{
-	background-color: #22201C;
+	background-color: #bacc17;
 	width:99%;
 	height: 18%;
-	margin-top: 45%;
+	
 	position:absolute;
  }
 
@@ -86,4 +88,5 @@
 	background-color: #22201C;
 	display: flex;
 	justify-content: center;
+	position:absolute;
  }
